<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group
		android:id="@+id/group_search_kind"
		android:checkableBehavior="single">

		<item
			android:id="@+id/action_kind_simple"
			android:title="@string/search_kind_default" />

		<item
			android:id="@+id/action_kind_title"
			android:title="@string/name" />

		<item
			android:id="@+id/action_kind_author"
			android:title="@string/author" />

		<item
			android:id="@+id/action_kind_tag"
			android:title="@string/genre" />

	</group>

	<group android:id="@+id/group_search_filters">

		<item
			android:id="@+id/action_filter_pinned_only"
			android:checkable="true"
			android:title="@string/pinned_sources_only" />

		<item
			android:id="@+id/action_filter_local_only"
			android:checkable="true"
			android:title="@string/local_library_only" />

	</group>
</menu>
