<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_search"
		android:icon="?actionModeWebSearchDrawable"
		android:orderInCategory="0"
		android:title="@string/search_chapters"
		app:actionViewClass="androidx.appcompat.widget.SearchView"
		app:showAsAction="ifRoom|collapseActionView" />

	<item
		android:id="@+id/action_reversed"
		android:checkable="true"
		android:icon="@drawable/ic_revert"
		android:title="@string/reverse_list"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_downloaded"
		android:checkable="true"
		android:icon="@drawable/ic_storage"
		android:title="@string/downloads_only"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_sort_by_name"
		android:checkable="true"
		android:icon="@drawable/ic_sort_by_name"
		android:title="@string/sort_chapters_by_name"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_merge_scanlators"
		android:checkable="true"
		android:icon="@drawable/ic_merge"
		android:title="@string/merge_scanlators"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_grid_view"
		android:checkable="true"
		android:icon="@drawable/ic_grid"
		android:title="@string/chapters_grid_view"
		app:showAsAction="never" />

</menu>
