<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_epub_search"
		android:icon="@drawable/ic_search"
		android:title="@string/epub_search_book"
		android:visible="false"
		app:showAsAction="always" />

	<item
		android:id="@+id/action_upscale_preview"
		android:icon="@drawable/ic_sparkles"
		android:title="@string/upscale_preview"
		android:visible="false"
		app:showAsAction="always" />

	<item
		android:id="@+id/action_reader_menu"
		android:icon="@drawable/ic_more_vert"
		android:title="@string/options"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_info"
		android:icon="@drawable/ic_info_outline"
		android:title="@string/details"
		android:visible="false"
		app:showAsAction="ifRoom" />

</menu>
