<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<item
		android:id="@+id/action_filter"
		android:icon="@drawable/ic_filter_funnel"
		android:orderInCategory="10"
		android:title="@string/filter"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_random"
		android:icon="@drawable/ic_dice"
		android:orderInCategory="30"
		android:title="@string/random"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_filter_reset"
		android:icon="@drawable/ic_revert"
		android:orderInCategory="30"
		android:title="@string/reset_filter"
		android:visible="false"
		app:showAsAction="never"
		tools:visible="true" />

	<item
		android:id="@+id/action_source_settings"
		android:icon="@drawable/ic_settings"
		android:orderInCategory="50"
		android:title="@string/settings"
		app:showAsAction="never" />
</menu>
