<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<com.google.android.material.button.MaterialButton
		android:id="@+id/button_local"
		style="@style/Widget.Kotatsu.ExploreButton.Secondary"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="4dp"
		android:text="@string/local_storage"
		app:icon="@drawable/ic_storage"
		app:layout_constraintEnd_toStartOf="@id/button_bookmarks"
		app:layout_constraintHorizontal_chainStyle="spread"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/button_bookmarks"
		style="@style/Widget.Kotatsu.ExploreButton.Secondary"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:layout_marginEnd="4dp"
		android:text="@string/bookmarks"
		app:icon="@drawable/ic_bookmark"
		app:layout_constraintEnd_toStartOf="@id/button_downloads"
		app:layout_constraintStart_toEndOf="@id/button_local"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/button_downloads"
		style="@style/Widget.Kotatsu.ExploreButton.Secondary"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:text="@string/downloads"
		app:icon="@drawable/ic_download"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/button_bookmarks"
		app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
